# navi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
Formula/: navi.rb
docs/: DEMO_README.md
src/navi/: __init__.py  ask.py  cli.py  config.py  daemon.py  hotkey.py  keychain.py  launchd.py  menubar.py  notify.py  output.py  process.py  recorder.py  transcribe.py  wakeword.py
tests/: test_navi.py  test_v02.py
