[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navi-voice"
version = "0.2.0"
description = "Think out loud, capture as notes — hotkey-triggered speech-to-text with local Whisper transcription"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "angad729"}
]
keywords = ["speech-to-text", "notes", "whisper", "transcription", "obsidian", "macos", "voice-notes", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
]
dependencies = [
    "click>=8.1.0",
    "mlx-whisper>=0.1.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "rumps>=0.4.0",
    "pynput>=1.7.6",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "pyobjc-framework-Cocoa>=9.0",
]

[project.optional-dependencies]
# Ask Navi - query your voice notes with natural language
ask = [
    "sentence-transformers>=2.2.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
navi = "navi.cli:main"

[project.urls]
Homepage = "https://github.com/angad729/navi"
Repository = "https://github.com/angad729/navi"
Issues = "https://github.com/angad729/navi/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
navi = ["assets/*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
